Added UnitFactory Class